# WSCS

./: README.md  WSCS_GUI.py  cr2fits.py  pyproject.toml
